Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-16855

Fix fts_sync() synchronization in InnoDB

    XMLWordPrintable

Details

    Description

      Oracle fixed Bug#27082268 Invalid FTS sync synchronization only in MySQL 5.7.23, not in the 5.6 series.
      The fix simplifies and removes some code and fixes a hang in ALTER TABLE or TRUNCATE TABLE due to InnoDB fulltext search cache synchronization.
      Let us port that fix to MariaDB 10.0 already.

      Attachments

        Issue Links

          Activity

            People

              marko Marko Mäkelä
              marko Marko Mäkelä
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 0.25d
                  0.25d

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.